# ticket-decoder

./: .env.default  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  REUSE.toml  build.sh  conanfile.py  conanfile.txt  debug.env  pyproject.toml  release.env  requirements.txt  setup.All.sh  setup.Debug.sh  setup.Decoder.sh  setup.Minimal.sh  setup.Python.sh  setup.Release.sh  setup.WASM.sh  setup.docker.ubuntu22.clang15.sh  setup.docker.ubuntu22.gcc11.Python.sh  setup.docker.ubuntu22.gcc11.sh  setup.docker.ubuntu24.clang16.sh  setup.docker.ubuntu24.gcc13.sh  setup.sh  setup.ubuntu.Release.sh  setup.ubuntu.clang12.Release.sh  setup.ubuntu.gcc10.Release.sh  setup.ubuntu22.clang15.sh  setup.ubuntu22.gcc11.Python.sh  setup.ubuntu22.gcc11.sh  setup.ubuntuJammy.clang15.Release.sh  setup.ubuntuJammy.gcc11.Python.sh  setup.ubuntuJammy.gcc11.Release.sh
source/app/: CMakeLists.txt
source/app/include/: InteractionController.h  OutputComposer.h
source/app/source/: InteractionController.cpp  OutputComposer.cpp  analyzer.cpp  decoder.cpp  main.cpp
source/lib/: CMakeLists.txt
source/lib/api/: CMakeLists.txt
source/lib/api/include/: Context.h  DecoderFacade.h
source/lib/api/source/: Context.cpp  DecoderFacade.cpp
source/lib/aztec/include/: AztecDecoder.h  BarcodeDecoder.h  BarcodeDecodingLevel.h  BarcodeDecodingResult.h
source/lib/aztec/source/: AztecDecoder.cpp  BarcodeDecodingResult.cpp
source/lib/barcode/: CMakeLists.txt
source/lib/barcode/include/: AztecDecoder.h  BarcodeDecoder.h  BarcodeDecodingLevel.h  BarcodeDecodingResult.h  Decoder.h  Level.h  Result.h
source/lib/barcode/source/: AztecDecoder.cpp  BarcodeDecodingResult.cpp  Decoder.cpp  Result.cpp
source/lib/decoder/: CMakeLists.txt
source/lib/decoder/api/: CMakeLists.txt
source/lib/decoder/detail/: CMakeLists.txt
source/lib/detector/: CMakeLists.txt
source/lib/detector/api/: CMakeLists.txt
source/lib/detector/detail/: CMakeLists.txt
source/lib/device/include/: UvcController.h
source/lib/device/source/: UvcController.cpp
source/lib/dip/: CMakeLists.txt
source/lib/dip/detection/: CMakeLists.txt
source/lib/dip/filtering/: CMakeLists.txt
source/lib/dip/include/: Color.h  Descriptor.h  Image.h  Pipe.h  PreProcessor.h  PreProcessorOptions.h  Shape.h  ShapeProperties.h  Text.h  Transform.h
source/lib/dip/source/: Descriptor.cpp  Image.cpp  Pipe.cpp  PreProcessor.cpp  PreProcessorOptions.cpp  Shape.cpp  Text.cpp  Transform.cpp
source/lib/dip/utility/: CMakeLists.txt
source/lib/include/: AztecDecoder.h  ClassifierDetector.h  ContourDescriptor.h  ContourDetectionResult.h  ContourDetector.h  ContourDetectorFilters.h  ContourDetectorResult.h  ContourSetDescriptor.h  ContourUtility.h  CvUtility.h  Decoder.h  DetectionResult.h  Detector.h  DeviceController.h  ImageDescriptor.h  ImageProcessor.h  Interpreter.h  KeyMapper.h  PreProcessor.h  SquareDetector.h  UIC918_3Interpreter.h  UIC918_3_Interpreter.h  Utility.h  Visualizer.h
source/lib/infrastructure/: CMakeLists.txt
source/lib/infrastructure/include/: Context.h  ContextFwd.h  DebugController.h  Logger.h  LoggerFactory.h  Logging.h  LoggingFwd.h  ParameterCollector.h  ParameterSupplier.h
source/lib/infrastructure/source/: Context.cpp  Logger.cpp  Logging.cpp  ParameterCollector.cpp
source/lib/input/: CMakeLists.txt
source/lib/input/api/: CMakeLists.txt
source/lib/input/camera/: CMakeLists.txt
source/lib/input/common/: CMakeLists.txt
source/lib/input/detail/: CMakeLists.txt
source/lib/interpreter/: CMakeLists.txt
source/lib/interpreter/api/: CMakeLists.txt
source/lib/interpreter/detail/: CMakeLists.txt
source/lib/interpreter/uic918/: CMakeLists.txt
source/lib/io/: CMakeLists.txt
source/lib/io/api/: CMakeLists.txt
source/lib/io/camera/: CMakeLists.txt
source/lib/io/image/: CMakeLists.txt
source/lib/io/pdf/: CMakeLists.txt
source/lib/output/: CMakeLists.txt
source/lib/output/api/: CMakeLists.txt
source/lib/output/detail/: CMakeLists.txt
source/lib/source/: AztecDecoder.cpp  ClassifierDetector.cpp  ContourDescriptor.cpp  ContourDetectionResult.cpp  ContourDetector.cpp  ContourDetectorFilters.cpp  ContourDetectorResult.cpp  ContourSetDescriptor.cpp  ContourUtility.cpp  CvUtility.cpp  DetectionResult.cpp  Detector.cpp  DeviceController.cpp  ImageDescriptor.cpp  KeyMapper.cpp  PreProcessor.cpp  SquareDetector.cpp  Utility.cpp  Visualizer.cpp  imageProcessor.cpp
source/lib/ui/: CMakeLists.txt
source/lib/ui/include/: KeyMapper.h  Window.h
source/lib/ui/source/: KeyMapper.cpp  Window.cpp
source/lib/uic918/: CMakeLists.txt
source/lib/uic918-3/include/: Interpreter.h  MainRecordInterpreter.h  TLB1Interpreter.h  Utility.h
source/lib/uic918-3/source/: Deflator.cpp  Interpreter.cpp  MainRecordInterpreter.cpp  TLB1Interpreter.cpp  TLBInterpreter.cpp  Utility.cpp
source/lib/uic918/include/: AbstractRecord.h  BlockHeader.h  Context.h  Deflator.h  EFSSegment.h  Field.h  FieldHeader.h  Interpreter.h  RCT2Field.h  RecordHeader.h  RecordInterpreter0080BL.h  RecordInterpreter0080VU.h  RecordInterpreterU_FLEX.h  RecordInterpreterU_HEAD.h  RecordInterpreterU_TLAY.h  SegmentInterpreterEFS.h  TLBInterpreter.h  Ticket.h  U_HEADInterpreter.h  U_TLAYInterpreter.h  Utility.h
source/lib/uic918/source/: AbstractRecord.cpp  Deflator.cpp  EFSSegment.cpp  Interpreter.cpp  RCT2Field.cpp  RecordHeader.cpp  RecordInterpreter0080BL.cpp  RecordInterpreter0080VU.cpp  RecordInterpreterU_FLEX.cpp  RecordInterpreterU_HEAD.cpp  RecordInterpreterU_TLAY.cpp  SegmentInterpreterEFS.cpp  TLBInterpreter.cpp  U_HEADInterpreter.cpp  (+2 more)
source/lib/utility/: CMakeLists.txt
source/python/: CMakeLists.txt  README.md  filter_keys.py  interpret_only.py  requirements.txt  run.py
source/python/etc/: __init__.py
source/python/source/: Binding.cpp
source/test/: CMakeLists.txt
source/test/python/: test_decode_uic918.py
source/test/source/: ContourDetectorTest.cpp  CvUtilityTest.cpp  ImageProcessorTest.cpp  InterpreterTest.cpp  PreProcessorTest.cpp  TLB1InterpreterTest.cpp  TLBInterpreterTest.cpp  UIC918_3Test.cpp  UtilityTest.cpp
(+587 files in other folders)
