# SPDX-FileCopyrightText: (C) 2026 user4223 and (other) contributors to ticket-decoder <https://github.com/user4223/ticket-decoder>
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "ticket-decoder"
version = "v0.17"
description = "Ticket barcode to json decoding library, using zxing-cpp decoding in combination with record interpreter, to transform content into json structure"
authors = [ { name = "user4223" } ]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "**/conanfile.py" },
    { file = "**/CMakeLists.txt" },
    { file = "source/**/*.{h,c,cpp}" }
    ]

[build-system]
requires = ["scikit-build-core-conan"]
build-backend = "scikit_build_core_conan.build"

[tool.cibuildwheel.environment]
CMAKE_POLICY_VERSION_MINIMUM = "3.5"             # easylogging has a quite old cmake requirement, that fails with cmake >= 4 due to deprecation

[tool.cibuildwheel]
build-verbosity = 2                              # https://cibuildwheel.pypa.io/en/stable/options/#build-verbosity
before-test = "./cert/install-uic-keys.sh"
test-command = "./etc/python-test.sh"
manylinux-aarch64-image = "manylinux_2_34"
manylinux-x86_64-image = "manylinux_2_34"        # https://cibuildwheel.pypa.io/en/stable/options/#linux-image

[tool.cibuildwheel.linux]
# before-all = "yum install -y python3.13-devel boost1.78-static"

[tool.scikit-build-core-conan]
path = "."
build = "missing"
output-folder = "build/Release"
settings-all = [
    "build_type=Release", 
    "compiler.cppstd=20"
    ]
options-all = [
    "&:with_system_boost=False",
    "&:with_ticket_analyzer=False",
    "&:with_ticket_decoder=False",
    "&:with_python_module=True",
    "&:with_square_detector=False",
    "&:with_classifier_detector=False",
    "&:with_barcode_decoder=True",
    "&:with_pdf_input=True",
    "&:with_signature_verifier=True",
    "&:with_uic_interpreter=True",
    "&:with_vdv_interpreter=True",
    "&:with_sbb_interpreter=True"
    ]

[[tool.scikit-build-core-conan.local-recipes]]
path = "etc/poppler/conanfile.py"

[tool.scikit-build]
strict-config = true
logging.level = "WARNING"

build-dir = "build/Release"
build.verbose = false
build.requires = ["conan>=2.28", "numpy"]
build.targets = ["ticket_decoder"]

cmake.build-type = "Release"
cmake.args = [ "--toolchain build/Release/build/Release/generators/conan_toolchain.cmake" ]
cmake.define = { CMAKE_BUILD_TYPE = "Release", CMAKE_POLICY_VERSION_MINIMUM = "3.5" }

sdist.exclude = ["build/", "conan2/", ".github/", ".vscode/", "dist/", "out/", "venv/", "*.log", "*.pnm", "setup.*.sh"]
sdist.include = ["doc/*", "cert/*", "images/*"]
sdist.inclusion-mode = "default"
sdist.reproducible = true

wheel.license-files = ["LICENSES/*"]
wheel.cmake = true
wheel.platlib = "platlib"                        # Target the platlib (platform specific) or the purelib (pure python and platform independent)
wheel.expand-macos-universal-tags = true         # Fill out extra tags that are not required

install.strip = false                            # Whether to strip the binaries

search.site-packages = true                      # Add the python build environment site_packages folder to the CMake prefix paths

metadata = {}                                    # List dynamic metadata fields and hook locations in this table
