# SPDX-FileCopyrightText: (C) 2026 user4223 and (other) contributors to ticket-decoder <https://github.com/user4223/ticket-decoder>
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "ticket-decoder"
version = "v0.18.1"
description = "Train ticket barcode to json decoding library, using zxing-cpp decoding in combination with record interpreter, to transform content into json structure"
license = "GPL-3.0-or-later"
authors = [ { name = "user4223" } ]
readme = "source/python/README.md"
keywords = ["train-ticket", "barcode", "aztec-code", "uic918", "vdv", "sbb", "oebb"]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/user4223/ticket-decoder"
Issues = "https://github.com/user4223/ticket-decoder/issues"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "**/conanfile.py" },
    { file = "**/CMakeLists.txt" },
    { file = "source/**/*.{h,c,cpp}" }
    ]

[build-system]
requires = ["scikit-build-core-conan"]
build-backend = "scikit_build_core_conan.build"

[tool.cibuildwheel.environment]
CMAKE_POLICY_VERSION_MINIMUM = "3.5"             # easylogging has a quite old cmake requirement, that fails with cmake >= 4 due to deprecation

[tool.cibuildwheel]
build-verbosity = 2                              # https://cibuildwheel.pypa.io/en/stable/options/#build-verbosity
build = [                                        # https://cibuildwheel.pypa.io/en/stable/options/#build-skip
    "cp31?-macosx_arm64",
    # "cp31?-macosx_x86_64",                     # No runner right now other than self hosted and thereby untrusted
    # "cp31?-manylinux_aarch64",                 # Alma-Linux is unable to build boost.python since libpython3x.a is not found for the selected non-system python version
    # "cp31?-manylinux_x86_64"                   # ...same, we have to find out how to install and provide libpython3x.a to the linker in Alma-Linux properly to get this working
    ]
manylinux-aarch64-image = "manylinux_2_34"       # https://cibuildwheel.pypa.io/en/stable/options/#linux-image
manylinux-x86_64-image = "manylinux_2_34"
before-test = "./cert/install-uic-keys.sh"
test-command = """python -c '
from ticket_decoder import DecoderFacade
decoder = DecoderFacade()
result = decoder.decode_base64("I1VUMDExMDgwMDAwMDEwLQIUNDW6hIQDALJXkeinsN8LGG6JJ9kCFQCbqcKtFige6dO0zRFzeaDKaTWlgwAAADAzNTh4nAuN93B1dDEwNDAwNTY0sDCwCIkwc3cxCGRAAgZmhgZGBkZGhibGFgYuri6uofEhPo6RQE1GRmYBPo6eBgZAnSZA0tDIAATMvXMSi4tTrQxMgRwjiJhZQGpRsZ4VmG1oAbLQwNItMaMoO7GoJBXMhWg2NHI/vCenJDM9OzWzxMrA0NAUZAJQ3sQwLD9PwchAz9BAD+QaBQNLoGlcTpnFCkaGCEFjkBUmhpYg46CmmgJ5RlCeqYEx3AFGpsHJGTmpxeWZ6boe+TnFJamZebohmcnZqSWh8W4+rhGGxiD7kzYxtD3kPbjo9A1RQY5GVpkWi5WJWyp6NBZwNTZwzDj07AXfsmMXnlw686KMsaFJiUGeoUGQr5STL+lMk7A0X1/Uh08vp7AvPNYgmMF0wKFBEqeVoDAMCwXHhBFDCjDYWRn1+pp0JUqYf0mUO4Z4MDiGSjAwCBqABNnvsAoIdzAIAAAFHHyh")
print(result)
'"""

[tool.cibuildwheel.linux]
# before-all = "yum install -y python3.13-devel boost1.78-static"

[tool.scikit-build-core-conan]
path = "."
build = "missing"
output-folder = "build/Release"
settings-all = [
    "build_type=Release", 
    "compiler.cppstd=20"
    ]
options-all = [
    "&:with_system_boost=False",
    "&:with_ticket_analyzer=False",
    "&:with_ticket_decoder=False",
    "&:with_python_module=True",
    "&:with_square_detector=False",
    "&:with_classifier_detector=False",
    "&:with_barcode_decoder=True",
    "&:with_pdf_input=True",
    "&:with_signature_verifier=True",
    "&:with_uic_interpreter=True",
    "&:with_vdv_interpreter=True",
    "&:with_sbb_interpreter=True"
    ]

[[tool.scikit-build-core-conan.local-recipes]]
path = "etc/poppler/conanfile.py"

[tool.scikit-build]
strict-config = true
logging.level = "WARNING"

build-dir = "build/Release"
build.verbose = false
build.requires = ["conan>=2.28", "numpy"]
build.targets = ["ticket_decoder"]

cmake.build-type = "Release"
cmake.args = [ "--toolchain build/Release/build/Release/generators/conan_toolchain.cmake" ]
cmake.define = { CMAKE_BUILD_TYPE = "Release", CMAKE_POLICY_VERSION_MINIMUM = "3.5" }

sdist.exclude = ["build/", "conan2/", ".github/", ".vscode/", "dist/", "out/", "venv/", "*.log", "*.pnm", "setup.*.sh"]
sdist.include = ["doc/*", "cert/*", "images/*"]
sdist.inclusion-mode = "default"
sdist.reproducible = true

wheel.license-files = ["LICENSES/*"]
wheel.cmake = true
wheel.platlib = "platlib"                        # Target the platlib (platform specific) or the purelib (pure python and platform independent)
wheel.expand-macos-universal-tags = true         # Fill out extra tags that are not required

install.strip = false                            # Whether to strip the binaries
